--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-dom": "^18",
     "react-image-gallery": "^1.3.0",
     "react-toastify": "^10.0.5",
+    "@reduxjs/toolkit": "^2.2.1",
+    "react-redux": "^9.1.0",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
