--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -28,12 +29,12 @@
     "framer-motion": "^11.0.15",
     "input-otp": "^1.2.0",
     "lucide-react": "^0.356.0",
-    "@reduxjs/toolkit": "^2.2.1",
-    "react-redux": "^9.1.0",
     "next": "^14.1.4",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "18.2.0",
     "react-image-gallery": "^1.3.0",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
     "react-toastify": "^10.0.5",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1",
