--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^11.0.15",
     "input-otp": "^1.2.0",
+    "moment": "^2.30.1",
     "lucide-react": "^0.356.0",
     "next": "^14.1.4",
     "react": "^18",
