--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.0.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.15",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.0",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.356.0",
     "moment": "^2.30.1",
     "next": "^14.1.4",
